fix: layout issues

--- a/src/app.css
+++ b/src/app.css
@@ -79,3 +79,8 @@ body {
 .modal-backdrop {
   backdrop-filter: blur(4px);
 }
+
+svg {
+  width: 1em;
+  height: 1em;
+}
